deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: okps
  labels:
    app.kubernetes.io/name: okps
    app.kubernetes.io/part-of: okps-pipeline
