deploy/k8s/metrics-headless-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: okps-producer-metrics-headless
  namespace: okps
  labels:
    app.kubernetes.io/name: okps-producer
    app.kubernetes.io/component: producer
    app.kubernetes.io/part-of: okps-pipeline
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: okps-producer
  ports:
    - name: metrics
      protocol: TCP
      port: 2112
      targetPort: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: okps-consumer-metrics-headless
  namespace: okps
  labels:
    app.kubernetes.io/name: okps-consumer
    app.kubernetes.io/component: consumer
    app.kubernetes.io/part-of: okps-pipeline
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: okps-consumer
  ports:
    - name: metrics
      protocol: TCP
      port: 2113
      targetPort: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: okps-collector-metrics-headless
  namespace: okps
  labels:
    app.kubernetes.io/name: okps-collector
    app.kubernetes.io/component: collector
    app.kubernetes.io/part-of: okps-pipeline
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: okps-collector
  ports:
    - name: metrics-self
      protocol: TCP
      port: 8888
      targetPort: metrics-self
    - name: metrics-exp
      protocol: TCP
      port: 8889
      targetPort: metrics-exp
